# vkp80iii

./: .editorconfig  .gitignore  .pre-commit-config.yaml  99-vkp80iii.rules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: guide.md  index.md
docs/api/: commands.md  constants.md  exceptions.md  printer.md  status.md  transport.md
examples/: led_demo.py  logo.py  logo_flash.py  monitor.py  presenter.py  receipt.py  render_2d.py  showcase.py  status.py
src/vkp80iii/: __init__.py  __main__.py  commands.py  constants.py  exceptions.py  imaging.py  printer.py  status.py  transport.py
tests/: test_cli.py  test_commands.py  test_imaging.py  test_printer.py  test_status.py  test_transport.py
tests/integration/: conftest.py  test_hardware.py
typings/usb/: __init__.pyi  _debug.pyi  _interop.pyi  _lookup.pyi  _objfinalizer.pyi  _version.pyi  control.pyi  core.pyi  legacy.pyi  libloader.pyi  util.pyi
typings/usb/backend/: __init__.pyi  libusb0.pyi  libusb1.pyi  openusb.pyi
